# egt-sample

./: Makefile.am  README.md  configure.ac
scripts/: targetbench.sh
src/: main.cpp
